[gd_scene load_steps=3 format=3 uid="uid://d255w6bca6ikd"]

[ext_resource type="Script" path="res://scripts/ui/dialog_manager/dialog_ui.gd" id="1_jmlwk"]

[sub_resource type="LabelSettings" id="LabelSettings_tqh0v"]
font_size = 36
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="dialog_manager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jmlwk")

[node name="margin_container" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.75
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -64.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="panel" type="Panel" parent="margin_container"]
layout_mode = 2

[node name="margin_container" type="MarginContainer" parent="margin_container/panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="label_container" type="Control" parent="margin_container/panel/margin_container"]
layout_mode = 2

[node name="dialog_label" type="Label" parent="margin_container/panel/margin_container/label_container"]
layout_mode = 2
offset_top = -17.0
offset_right = 1760.0
offset_bottom = 221.0
size_flags_vertical = 1
label_settings = SubResource("LabelSettings_tqh0v")
autowrap_mode = 1

[node name="print_timer" type="Timer" parent="."]
wait_time = 0.05

[connection signal="timeout" from="print_timer" to="." method="_on_print_timer_timeout"]
